<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvAppName"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvTitle"
        android:gravity="center"
        android:text="@string/title_passcode"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/dotIndicator1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/dot_indicator_inactive"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/dotIndicator2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/dot_indicator_inactive"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/dotIndicator1"/>

    <ImageView
        android:id="@+id/dotIndicator3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/dot_indicator_inactive"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/dotIndicator2"/>
    <LinearLayout
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/llOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber1"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/number1"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber2"
                android:layout_margin="10dp"

                android:gravity="center"
                android:text="@string/number2"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber3"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/number3"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber4"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/number4"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber5"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/number5"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber6"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/number6"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber7"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/number7"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber8"
                android:layout_margin="10dp"
                android:text="@string/number8"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber9"
                android:layout_margin="10dp"
                android:text="@string/number9"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ivNumber0"
                android:gravity="center"
                android:text="@string/number0"
                android:background="@drawable/circle_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>