<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/llHeader"
        android:weightSum="3"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background">
        <ImageView
            android:src="@drawable/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="2"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvGeneral"
        android:textSize="18dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"
        android:text="@string/general"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:background="@drawable/custom_background_edittext_message"
        android:id="@+id/llAccess"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/tvAccess"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textSize="14dp"
            android:text="@string/access_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchCompatAccess"
            android:checked="true"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llClearData"
        android:layout_margin="10dp"
        android:background="@drawable/custom_background_edittext_message"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/llAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/tvClearData"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textSize="14dp"
            android:text="@string/clear_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
<!--    <TextView-->
<!--        android:id="@+id/tvPrivacy"-->
<!--        android:textSize="18dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:textColor="@color/colorBlue"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/privacy"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/llClearData"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->
<!--    <LinearLayout-->
<!--        android:id="@+id/llPasscode"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvPrivacy"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:weightSum="2">-->
<!--    <TextView-->
<!--        android:id="@+id/tvPasscode"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_weight="2"-->
<!--        android:textSize="20dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:text="@string/passcode"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->
<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/switchCompatPassCode"/>-->
<!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>