<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/llHeader"
        android:weightSum="3"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background">
        <ImageView
            android:paddingStart="10dp"
            android:src="@drawable/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="2"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llSearch"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_background_edittext_message"
        android:weightSum="2">
        <EditText
            android:layout_weight="2"
            android:paddingStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/llHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/search"
            android:background="@null"/>
        <ImageView
            android:paddingEnd="20dp"
            android:src="@drawable/icon_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTitle"
        app:layout_constraintTop_toBottomOf="@id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2"
        android:gravity="center">
        <TextView
            android:paddingStart="10dp"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="10dp"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@color/colorAccent"
            android:text="@string/delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_search_history"/>



</androidx.constraintlayout.widget.ConstraintLayout>
